# token-visualizer

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pet.html  popover.html  serve.bat  serve.command  serve.sh  tsconfig.json  vite.config.ts  vitest.config.ts
crates/cm-serve/: Cargo.toml
crates/cm-serve/src/: main.rs
crates/cm-serve/tests/: smoke.rs
crates/core/: Cargo.toml
crates/core/src/: codex.rs  codex_live.rs  importer.rs  lib.rs  model.rs  parser.rs  paths.rs  pricing.rs  query.rs  reasonix.rs  reasonix_live.rs  state.rs  store.rs  text.rs  watcher.rs
crates/core/tests/: import_tests.rs  parser_tests.rs  paths_tests.rs  pricing_tests.rs  query_tests.rs  state_tests.rs  store_tests.rs  watcher_tests.rs
crates/core/tests/fixtures/projects/proj-a/: session1.jsonl
crates/core/tests/fixtures/projects/proj-b/: session2.jsonl
crates/server/: Cargo.toml
crates/server/src/: discord.rs  fx.rs  lib.rs  server.rs  session_end.rs  settings.rs  state_poll.rs  util.rs
docs/superpowers/: NIGHT-REPORT-2026-06-05.md
docs/superpowers/plans/: 2026-06-05-claude-monitor.md
docs/superpowers/specs/: 2026-06-05-claude-monitor-design.md  2026-06-08-continuous-token-roll-design.md  2026-06-09-browser-mode-design.md
scripts/: capture-readme.mjs  popcap-region.ps1  popcap.ps1  popfind.ps1
src/: bucket-label.test.ts  dashboard-null.test.ts  dashboard.test.ts  main.ts  styles.css  test-setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: set_popover_height.toml
src-tauri/src/: discord.rs  lib.rs  notify.rs  server.rs  settings.rs  state_poll.rs  tray.rs  util.rs  windows.rs
src/components/: by-source.ts  limits.test.ts  limits.ts  odometer.test.ts  odometer.ts  settings-panel.test.ts  settings-panel.ts  token-ticker.test.ts  token-ticker.ts
src/lib/: api.test.ts  api.ts  currency.test.ts  currency.ts  format.test.ts  format.ts  live-creep.test.ts  live-creep.ts  motion.test.ts  motion.ts  tween.test.ts  tween.ts  types.ts
src/pet/: Clawd.ts  clawd-grid.test.ts  clawd-grid.ts  pet-main.ts  pet-render.test.ts  pet.css  state-class.test.ts
src/popover/: popover-main.ts  popover.css  popover.test.ts
