[package]
name = "claude-monitor"
version = "0.1.0"
description = "Claude Monitor — token usage + Clawd work-state desktop pets"
edition = "2021"

[lib]
name = "claude_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cmcore = { path = "../crates/core", package = "claude-monitor-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["fs", "cors"] }
dirs = "5"
anyhow = "1"
walkdir = "2"
discord-rich-presence = "0.2"

# Windows-only: lightweight PlaySoundW for the session-end chime (no audio-graph deps).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Media_Audio", "Win32_Foundation"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
