[package]
name = "claude-monitor"
version = "0.1.0"
description = "Claude Monitor — Claude Code token usage + live session state"
edition = "2021"

[lib]
name = "claude_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
cmcore = { path = "../crates/core", package = "claude-monitor-core" }
# The GUI-free core runtime (axum server + ingestion + settings/fx/discord +
# headless state-poll). The desktop shell calls `cmserver::run_core` then layers
# the window/tray/popover/notifications on top.
cmserver = { path = "../crates/server", package = "claude-monitor-server" }
anyhow = "1"

# Windows-only: lightweight PlaySoundW for the session-end chime (no audio-graph
# deps) + DWM for rounding the frameless acrylic popover's native window corners
# (so the acrylic backdrop isn't a hard square behind the rounded card).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Media_Audio", "Win32_Foundation", "Win32_Graphics_Dwm"] }
