[package]
name = "cm-serve"
version = "0.1.0"
edition = "2021"
description = "Claude Monitor — run the full dashboard in your browser (no desktop app)"

[[bin]]
name = "cm-serve"
path = "src/main.rs"

[dependencies]
cmserver = { path = "../server", package = "claude-monitor-server" }
cmcore = { path = "../core", package = "claude-monitor-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
anyhow = "1"
# Cross-platform default-browser opener (macOS `open` / Windows `start` /
# Linux `xdg-open`). Browser-focused (unlike the general `open` crate) and
# documents macOS/Windows/Linux support. Failure is non-fatal in `cm-serve`.
webbrowser = "1"

[dev-dependencies]
# Smoke test boots the real server and talks HTTP over a loopback socket.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
serde_json = "1"
