[package]
name = "claude-monitor-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "core"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "6"
dirs = "5"
anyhow = "1"
chrono = "0.4"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
